--- a/index.html
+++ b/index.html
@@ -44,15 +44,21 @@
         </header>
 
         <!-- Texts after navbar -->
-        <div class="text-white py-16 lg:pr-96">
-          <h1 class="md:text-6xl text-4xl lg:mr-16">
-            Helping companies build better, scalable software.
-          </h1>
-          <p class="text-gray-400 mt-5 lg:mr-72 text-xl" >
-            Award winnig web developer and author, with over 15+ years of
-            working experience with forune 500 companies Apple, Google, Facebook
-            and more.
-          </p>
+        <div class="text-white py-16 lg:grid grid-cols-12">
+          <div class="col-span-7">
+            <h1 class="md:text-6xl text-4xl">
+              Helping companies build better, scalable software.
+            </h1>
+            <p class="text-gray-400 text-xl md:w-5/6" >
+              Award winnig web developer and author, with over 15+ years of
+              working experience with forune 500 companies Apple, Google, Facebook
+              and more.
+            </p>
+          </div>
+
+          <div>
+
+          </div>
         </div>
 
         <!-- Flex Logos -->
