--- a/index.html
+++ b/index.html
@@ -1,225 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body class="bg-zinc-900">
-    <section class="py-6 bg-zinc-900">
-      <div class="container mx-auto">
-        <header>
-          <nav class="grid md:grid-cols-3 grid-cols-1 justify-between md:items-center items-start">
-            <div>
-              <h4 class="text-xl text-white">Jonathan Spector</h4>
-            </div>
-            <div class="">
-              <ul class="flex lg:justify-evenly flex-col lg:flex-row bg-white lg:bg-zinc-900 items-center text-gray-400
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body class="bg-zinc-900">
+
+  <header class="container pt-6 mx-auto">
+    <nav class="grid md:grid-cols-3 grid-cols-1 justify-between md:items-center items-start">
+      <div>
+        <h4 class="text-xl text-white">Jonathan Spector</h4>
+      </div>
+      <div class="">
+        <ul class="flex lg:justify-evenly flex-col lg:flex-row bg-white lg:bg-zinc-900 items-center text-gray-400
               absolute lg:static top w-3/4 lg:w-auto mt-8 lg:mt-0 right-10 md:right-24 text-xl" id="navList">
-                <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Article</a></li>
-                <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Chats</a></li>
-                <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Awards</a></li>
-                <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> About</a></li>
-                <li>
-                  <button
-                class="px-6 py-3 bg-yellow-300 text-black text-xl hover:bg-yellow-200 tr duration-300 block lg:hidden my-5 lg:mx-0 ">
-                Get in touch</button>
-                </li>
-              </ul>
-            </div>
-            <div class="ml-auto">
-              <button
-                class="px-6 py-3 bg-yellow-300 text-black text-xl hover:bg-yellow-200 tr duration-300 hidden lg:block"
-              >
-                Get in touch
-              </button>
-              <img src="./Developer Portfolio Starter Files/Assets/Hamburger Menu.svg" class="block lg:hidden absolute top-7 right-5" onclick="hammenu()" alt="">
-
-            </div>
-          </nav>
-        </header>
-
-        <!-- Texts after navbar -->
-        <div class="text-white py-16 lg:grid grid-cols-12">
-          <div class="col-span-7">
-            <h1 class="md:text-6xl text-4xl">
-              Helping companies build better, scalable software.
-            </h1>
-            <p class="text-gray-400 text-xl md:w-5/6" >
-              Award winnig web developer and author, with over 15+ years of
-              working experience with forune 500 companies Apple, Google, Facebook
-              and more.
-            </p>
-          </div>
-
-          <div>
-
-          </div>
-        </div>
-
-        <!-- Flex Logos -->
-        <div class="flex justify-between items-center flex__logo md:mb-20 lg:my-auto">
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/Walmart.svg"
-            alt=""
-          />
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/JP Morgan.svg"
-            alt=""
-          />
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/Visa.svg"
-            alt=""
-            
-          />
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/Tinder.svg"
-            alt=""
-            class="my-5 lg:my-0"
-          />
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/Samsung.svg"
-            alt=""
-          />
-          <img
-            src="./Developer Portfolio Starter Files/Assets/Logos/Verizon.svg"
-            alt=""
-          />
-        </div>
-
-        <!-- flex images -->
-        <div class="flex__cards">
-          <div class = "card">
-            <img
-              src="./Developer Portfolio Starter Files/Assets/Spense.png"
-              class="card__img"
-              alt=""
-            />
-            <div class="card__headline">
-              <h2 class="">Spense.com</h2>
-              <span class="card__arrow"
-                ><img
-                  src="./Developer Portfolio Starter Files/Assets/Logos/arrow-right .svg"
-              /></span>
-            </div>
-            <p class="text-gray-400 card__description text-xl">
-              Rethinking that way writers get paid, an open source platform
-              designed to help writers focus more on writing, and less on when
-              and how they'll get paid. Project in collaborationwith Codewell.cc
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="./Developer Portfolio Starter Files/Assets/YelpCamp.png"
-              class="card__img"
-              alt=""
-            />
-            <div class="card__headline">
-              <h2>YelpCamp.com</h2>
-              <span class="card__arrow"
-                ><img
-                  src="./Developer Portfolio Starter Files/Assets/Logos/arrow-right .svg"
-              /></span>
-            </div>
-            <p class="text-gray-400 card__description text-xl">
-              Allowing backpack travelers to perfect plan their trip through an
-              open-source platform similar to TripAdvisor. With over 1m MAU,
-              YelpCamp has been the crowd;s favorite in 2021.
-            </p>
-          </div>
-        </div>
+          <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Article</a></li>
+          <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Chats</a></li>
+          <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> Awards</a></li>
+          <li class="hover:text-white my-5 lg:mx-0 "><a href="#"> About</a></li>
+          <li>
+            <button
+              class="px-6 py-3 bg-yellow-300 text-black text-xl hover:bg-yellow-200 tr duration-300 block lg:hidden my-5 lg:mx-0 ">
+              Get in touch</button>
+          </li>
+        </ul>
       </div>
-    </section>
+      <div class="ml-auto">
+        <button class="px-6 py-3 bg-yellow-300 text-black text-xl hover:bg-yellow-200 tr duration-300 hidden lg:block">
+          Get in touch
+        </button>
+        <img src="./Developer Portfolio Starter Files/Assets/Hamburger Menu.svg"
+          class="block lg:hidden absolute top-7 right-5" onclick="hammenu()" alt="">
 
-    <!-- Gray section -->
-    <section class="py-12 bg-neutral-700">
-      <div class="container mx-auto">
-        <div class="lg:grid grid-cols-2 gap-24">
-          <div>
-            <h2 class="text-white text-4xl my-3">
-              A co-founder at one of the world's largest communities.
-            </h2>
-            <p class="text-gray-400 text-md text-xl">
-              The combined experience | have working at the top Fortune 500
-              companies has allowed me to developer a skillset that helps me in
-              not just development, but in every aspect of any business.
-              </p>
-
-              <p class="mt-5 text-gray-400 text-md text-xl"> I'm proud to announce that | am now working at one of the world's
-              largest communities teaching young minds about how to sell
-              yourself as a developer and open them to a whole new world of
-              opportunities.
-            </p>
-          </div>
-          <div class="text-gray-400 text-md text-xl">
-            <p>
-              As a developer, you have everything available to you and all
-              that's holding you back is yourself.
-              </p>
-
-              <p class="mt-5"> A quote | live by perfectly illustrates what | mean.</p>
-
-              <p class="mt-5"> “How big would you dream, if you knew you wouldn't fail?” You've
-              already gone through the hardest parts being a developer, it's
-              time to elevate your skills and become a leader</p>
-
-              <p class="mt-5"> in something you're passionate about.</p>
-
-              <p class="mt-5"> I'm happy to chat over coffee some time about how | can help your
-              company.
-            </p>
-          </div>
-        </div>
       </div>
-    </section>
+    </nav>
+  </header>
 
-    <section class="py-10 bg-zinc-900">
-      <div class="container mx-auto lg:grid grid-cols-2 gap-24">
-        <div>
-          <h2 class="text-white text-4xl">Interested in working with me?</h2>
-          <p class="text-gray-400 text-md my-5 text-xl">
-            I'm active on all social media platforms listed below, but you can
-            also me an email and I will get back to you within 24-48 hours.
+  <!-- Texts after navbar -->
+  <section class="py-6 bg-zinc-900">
+    <div class="container mx-auto">
+      <div class="text-white py-16 lg:grid grid-cols-12">
+        <div class="col-span-7">
+          <h1 class="md:text-6xl text-4xl">
+            Helping companies build better, scalable software.
+          </h1>
+          <p class="text-gray-400 text-xl md:w-5/6">
+            Award winnig web developer and author, with over 15+ years of
+            working experience with forune 500 companies Apple, Google, Facebook
+            and more.
           </p>
-          <button class="px-6 py-3 bg-yellow-300 hover:bg-yellow-200 tr duration-300 text-black text-xl">
-            Get in touch
-          </button>
         </div>
-        <div></div>
-      </div>
-    </section>
 
-    <footer class="py-6 bg-neutral-700">
-      <div class="container mx-auto">
-        <div class="flex justify-between">
-          <div>
-            <h4 class="text-xl text-white">Jonathan Spector</h4>
-          </div>
-          <div class="flex justify-between md:gap-5 gap-2">
-            <img
-              class="cursor-pointer"
-              src="./Developer Portfolio Starter Files/Assets/Social Icons/Github.svg"
-              alt=""
-            />
-            <img
-              class="cursor-pointer"
-              src="./Developer Portfolio Starter Files/Assets/Social Icons/LinkedIn.svg"
-              alt=""
-            />
-            <img
-              class="cursor-pointer"
-              src="./Developer Portfolio Starter Files/Assets/Social Icons/Twitter.svg"
-              alt=""
-            />
-          </div>
+        <div>
+
         </div>
       </div>
-    </footer>
 
-    <script src="./script.js"></script>
-  </body>
+      <!-- Flex Logos -->
+      <div class="flex justify-between items-center flex__logo md:mb-20 lg:my-auto">
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/Walmart.svg" alt="" />
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/JP Morgan.svg" alt="" />
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/Visa.svg" alt="" />
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/Tinder.svg" alt="" class="my-5 lg:my-0" />
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/Samsung.svg" alt="" />
+        <img src="./Developer Portfolio Starter Files/Assets/Logos/Verizon.svg" alt="" />
+      </div>
+
+      <!-- flex images -->
+      <div class="flex__cards grid grid-cols-1 lg:grid-cols-2 gap-24 my-10">
+        <div class="card">
+          <img src="./Developer Portfolio Starter Files/Assets/Spense.png" class="card__img" alt="" />
+          <div class="card__headline">
+            <h2 class="">Spense.com</h2>
+            <span class="card__arrow"><img
+                src="./Developer Portfolio Starter Files/Assets/Logos/arrow-right .svg" /></span>
+          </div>
+          <p class="text-gray-400 card__description text-xl">
+            Rethinking that way writers get paid, an open source platform
+            designed to help writers focus more on writing, and less on when
+            and how they'll get paid. Project in collaborationwith Codewell.cc
+          </p>
+        </div>
+        <div class="card">
+          <img src="./Developer Portfolio Starter Files/Assets/YelpCamp.png" class="card__img" alt="" />
+          <div class="card__headline">
+            <h2>YelpCamp.com</h2>
+            <span class="card__arrow"><img
+                src="./Developer Portfolio Starter Files/Assets/Logos/arrow-right .svg" /></span>
+          </div>
+          <p class="text-gray-400 card__description text-xl">
+            Allowing backpack travelers to perfect plan their trip through an
+            open-source platform similar to TripAdvisor. With over 1m MAU,
+            YelpCamp has been the crowd;s favorite in 2021.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Gray section -->
+  <section class="py-12 bg-neutral-700">
+    <div class="container mx-auto">
+      <div class="lg:grid grid-cols-2 gap-24">
+        <div>
+          <h2 class="text-white text-4xl my-3">
+            A co-founder at one of the world's largest communities.
+          </h2>
+          <p class="text-gray-400 text-md text-xl">
+            The combined experience | have working at the top Fortune 500
+            companies has allowed me to developer a skillset that helps me in
+            not just development, but in every aspect of any business.
+          </p>
+
+          <p class="mt-5 text-gray-400 text-md text-xl"> I'm proud to announce that | am now working at one of the
+            world's
+            largest communities teaching young minds about how to sell
+            yourself as a developer and open them to a whole new world of
+            opportunities.
+          </p>
+        </div>
+        <div class="text-gray-400 text-md text-xl">
+          <p class="mt-10">
+            As a developer, you have everything available to you and all
+            that's holding you back is yourself.
+          </p>
+
+          <p class="mt-5"> A quote | live by perfectly illustrates what | mean.</p>
+
+          <p class="mt-5"> “How big would you dream, if you knew you wouldn't fail?” You've
+            already gone through the hardest parts being a developer, it's
+            time to elevate your skills and become a leader</p>
+
+          <p class="mt-5"> in something you're passionate about.</p>
+
+          <p class="mt-5"> I'm happy to chat over coffee some time about how | can help your
+            company.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="py-10 bg-zinc-900">
+    <div class="container mx-auto lg:grid grid-cols-2 gap-24">
+      <div>
+        <h2 class="text-white text-4xl">Interested in working with me?</h2>
+        <p class="text-gray-400 text-md my-5 text-xl">
+          I'm active on all social media platforms listed below, but you can
+          also me an email and I will get back to you within 24-48 hours.
+        </p>
+        <button class="px-6 py-3 bg-yellow-300 hover:bg-yellow-200 tr duration-300 text-black text-xl">
+          Get in touch
+        </button>
+      </div>
+      <div></div>
+    </div>
+  </section>
+
+  <footer class="py-6 bg-neutral-700">
+    <div class="container mx-auto">
+      <div class="flex justify-between">
+        <div>
+          <h4 class="text-xl text-white">Jonathan Spector</h4>
+        </div>
+        <div class="flex justify-between md:gap-5 gap-2">
+          <img class="cursor-pointer" src="./Developer Portfolio Starter Files/Assets/Social Icons/Github.svg" alt="" />
+          <img class="cursor-pointer" src="./Developer Portfolio Starter Files/Assets/Social Icons/LinkedIn.svg"
+            alt="" />
+          <img class="cursor-pointer" src="./Developer Portfolio Starter Files/Assets/Social Icons/Twitter.svg"
+            alt="" />
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="./script.js"></script>
+</body>
+
 </html>
