--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <!-- flex images -->
-      <div class="flex__cards grid grid-cols-1 lg:grid-cols-2 gap-24 my-10">
+      <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-24 gap-16 my-10">
         <div class="card">
           <img src="./Developer Portfolio Starter Files/Assets/Spense.png" class="card__img" alt="" />
           <div class="card__headline">
